--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@angular/ssr": "^20.3.8",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
+    "classlist.js": "^1.1.20150312",
     "express": "^5.1.0",
+    "intl-tel-input": "^25.12.5",
     "jwt-decode": "^4.0.0",
+    "ngx-intl-tel-input": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
